--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.13.3",
     "@astrojs/check": "^0.9.2",
+    "@astrojs/netlify": "^5.5.0",
+    "@astrojs/tailwind": "^5.1.0",
+    "@types/alpinejs": "^3.13.10",
+    "alpinejs": "^3.14.1",
+    "astro": "^4.13.3",
+    "htmx.org": "^2.0.1",
+    "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
   }
 }
