--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,10 @@
       "@data/*": ["src/data/*"],
       "@src/*": ["src/*"],
       "@images/*":["src/images/*"]
-    }
+    },
+    "types": [
+      "htmx.org/dist/htmx"
+    ]
   }
+  
 }
