--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
     "astro": "^4.13.3",
-    "htmx.org": "^2.0.1",
+    "htmx.org": "^1.9.12",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "@types/node": "^22.3.0"
   }
 }
