--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
     "astro": "^4.13.3",
+    "dotenv": "^16.4.5",
     "htmx.org": "^1.9.12",
+    "pocketbase": "^0.21.4",
     "tailwindcss": "^3.4.9",
     "typescript": "^5.5.4"
   },
