--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.2",
     "@astrojs/netlify": "^5.5.0",
+    "@astrojs/sitemap": "^3.1.6",
     "@astrojs/tailwind": "^5.1.0",
     "@types/alpinejs": "^3.13.10",
     "alpinejs": "^3.14.1",
